--- a/diagnostics/Visualization.ipynb
+++ b/diagnostics/Visualization.ipynb
@@ -33,6 +33,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hi\n",
+      "hi\n",
+      "hi\n",
+      "hi\n",
+      "hi\n",
+      "hi\n"
+     ]
+    }
+   ],
+   "source": [
+    "for _ in range(6):\n",
+    "    print(\"hi\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
